src/objects/Maintenance_Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of the ticket</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>ticket for which stage</description>
        <label>Stage</label>
        <referenceTo>Stage__c</referenceTo>
        <relationshipLabel>Maintenance Tickets</relationshipLabel>
        <relationshipName>Maintenance_Tickets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the ticket</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>technician for the defect</description>
        <label>Technician</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Maintenance Tickets</relationshipLabel>
        <relationshipName>Maintenance_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maintenance Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MTN-{0000}</displayFormat>
        <label>Maintenance Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintenance Tickets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>